fix placeholder color and scrollbar on textarea

--- a/style.css
+++ b/style.css
@@ -286,7 +286,35 @@ h2 {
     background-position: -90px 0px;
 }
 
+textarea {
+    overflow: hidden;
+}
+
 .socials {
     height: 45px;
     padding-bottom: 50px;
 }
+
+//Стилизация placeholder'ов
+
+input[placeholder]{color:white;}
+input::-webkit-input-placeholder {color:white;}
+input::-moz-placeholder{ 
+    opacity: 1;
+    color:white;
+}/* Firefox 19+ */
+input:-moz-placeholder           {
+    opacity: 1;
+    color:white;
+}/* Firefox 18- */
+input:-ms-input-placeholder      {color:white;}
+textarea::-webkit-input-placeholder {color:white;}
+textarea::-moz-placeholder          {
+    opacity: 1;
+    color:white;
+}/* Firefox 19+ */
+textarea:-moz-placeholder           {
+    opacity: 1;
+    color:white;
+}/* Firefox 18- */
+textarea:-ms-input-placeholder      {color:white;}
